# sankey-gen

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  output.json  pyproject.toml  temp.json
output/: readme.md
src/: cashflow.py  flow.py
