[tool.poetry]
name = "Sankey Generator"
version = "0.1.0"
description = "Visualize Entity flow"
authors = ["None"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
plotly = "^5.15.0"
scikit-learn = "^1.3.0"
pre-commit = "^3.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
